objects/LS_LegalArticle__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PD-6938  to see T&amp;Cs and Privacy articles relevant to the country</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LS_LegalArticle</label>
</CustomObject>